--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -8,10 +8,10 @@
   }
   
   :root {
-    --primary-color: #a855f7;
-    --primary-light: #d8b4fe;
+    --primary-color: #4b5593;
+    --primary-light: #b1bbf9;
     --primary-lighter: #e9d5ff;
-    --primary-dark: #9333ea;
+    --primary-dark: #7d8ff5;
     --white: #ffffff;
     --black: #000000;
     --gray-100: #f3f4f6;
