--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -24,6 +24,12 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     padding: 2rem;
   }
+  .title{
+     font-size: 1.5rem;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 0rem;
+  }
   
   .form-title {
     font-size: 1.875rem;
